@@ -1,3 +1,7 @@
+2008-05-20  Dmitry Dulepov  <dmitry@typo3.org>
+
+	* Fixed bug #8263 t3editor should not highlight decimals (thanks to Tobias Liebig)
+
 2008-05-20  Ingo Renner  <ingo@typo3.org>
 
 	* Fixed bug #8445: Align group fields in TCEforms
